Added outside lights

--- a/5865-w-74-movement.html
+++ b/5865-w-74-movement.html
@@ -24,56 +24,73 @@
       <g stroke="none" stroke-opacity="1" stroke-dasharray="none" fill="none" fill-opacity="1">
         <title>Canvas 1</title>
         <g>
-          <title>Rooms</title>
-          <rect id="living-room" x="131.0187" y="122.625" width="283.97" height="98.9543" class="room-inactive"/>
-          <rect id="living-room-wall" x="131.0187" y="122.625" width="283.97" height="98.9543" class="room-inactive-wall"/>
-          <rect id="bedroom-guest-1" x="415.125" y="122.625" width="108.28059" height="98.9543" class="room-inactive"/>
-          <rect id="bedroom-guest-1-wall" x="415.125" y="122.625" width="108.28059" height="98.9543" class="room-inactive-wall"/>
-          <rect id="hallway" x="415.125" y="221.625" width="35" height="290.375" class="room-inactive"/>
-          <rect id="hallway-wall" x="415.125" y="221.625" width="35" height="290.375" class="room-inactive-wall"/>
-          <rect id="kitchen" x="131.0187" y="221.625" width="124.3563" height="101.20834" class="room-inactive"/>
-          <rect id="kitchen-wall" x="131.0187" y="221.625" width="124.3563" height="101.20834" class="room-inactive-wall"/>
-          <rect id="bathroom-guest" x="255.375" y="221.625" width="63" height="101.25" class="room-inactive"/>
-          <rect id="bathroom-guest-wall" x="255.375" y="221.625" width="63" height="101.25" class="room-inactive-wall"/>
-          <rect id="reading-room" x="318.375" y="221.625" width="96.61369" height="101.25" class="room-inactive"/>
-          <rect id="reading-room-wall" x="318.375" y="221.625" width="96.61369" height="101.25" class="room-inactive-wall"/>
-          <rect id="solarium" x="309.35206" y="322.875" width="105.63663" height="189.125" class="room-inactive"/>
-          <rect id="solarium-wall" x="309.35206" y="322.875" width="105.63663" height="189.125" class="room-inactive-wall"/>
-          <rect id="bathroom-main" x="450" y="249.94345" width="73.40559" height="70.875" class="room-inactive"/>
-          <rect id="bathroom-main-wall" x="450" y="249.94345" width="73.40559" height="70.875" class="room-inactive-wall"/>
-          <rect id="closet-hall" x="450" y="320.81845" width="73.40559" height="32.43155" class="room-inactive"/>
-          <rect id="closet-hall-wall" x="450" y="320.81845" width="73.40559" height="32.43155" class="room-inactive-wall"/>
-          <rect id="bedroom-guest-2" x="450" y="353.25" width="73.40559" height="70.875" class="room-inactive"/>
-          <rect id="bedroom-guest-2-wall" x="450" y="353.25" width="73.40559" height="70.875" class="room-inactive-wall"/>
-          <rect id="closet-master-bedroom" x="450" y="424.125" width="73.40559" height="109.625" class="room-inactive"/>
-          <rect id="closet-master-bedroom-wall" x="450" y="424.125" width="73.40559" height="109.625" class="room-inactive-wall"/>
-          <rect id="bedroom-master" x="309.35206" y="511.875" width="214.05352" height="143.125" class="room-inactive"/>
-          <rect id="bedroom-master-wall" x="309.35206" y="511.875" width="214.05352" height="143.125" class="room-inactive-wall"/>
-          <rect id="closet-guest-1" x="450" y="221.5793" width="73.40559" height="28.170703" class="room-inactive"/>
-          <rect id="closet-guest-1-wall" x="450" y="221.5793" width="73.40559" height="28.170703" class="room-inactive-wall"/>
-          <rect id="garage-laundry" x="138.375" y="543.375" width="73.40559" height="178.75" class="room-inactive"/>
-          <rect id="garage-laundry-wall" x="138.375" y="543.375" width="73.40559" height="178.75" class="room-inactive-wall"/>
-          <rect id="garage-front" x="41.625" y="543.375" width="96.61369" height="118.125" class="room-inactive"/>
-          <rect id="garage-front-wall" x="41.625" y="543.375" width="96.61369" height="118.125" class="room-inactive-wall"/>
-          <rect id="garage-rear" x="41.625" y="661.5" width="96.61369" height="60.625" class="room-inactive"/>
-          <rect id="garage-rear-wall" x="41.625" y="661.5" width="96.61369" height="60.625" class="room-inactive-wall"/>
-          <rect id="door-kitchen" x="220.125" y="319.5" width="19.5" height="6"class="door-inactive"/>
-          <rect id="door-kitchen-wall" x="220.125" y="319.5" width="19.5" height="6" class="door-inactive-wall"/>
-          <rect id="door-solarium" x="307.6875" y="395.5" width="4.5" height="43.875"class="door-inactive"/>
-          <rect id="door-solarium-wall" x="307.6875" y="395.5" width="4.5" height="43.875" class="door-inactive-wall"/>
-          <rect id="door-solarium-reading" x="342" y="319.5"  width="18" height="6" class="door-inactive"/>
-          <rect id="door-solarium-reading-wall" x="342" y="319.5"  width="18" height="6" class="door-inactive-wall"/>
-          <rect id="door-front" x="375.75" y="119.8125" width="18" height="6" class="door-inactive"/>
-          <rect id="door-front-wall" x="375.75" y="119.8125" width="18" height="6" class="door-inactive-wall"/>
-          <rect id="door-garage" x="177.75" y="540" width="19.5" height="6"class="door-inactive"/>
-          <rect id="door-garage-wall" x="177.75" y="540" width="19.5" height="6" class="door-inactive-wall"/>
-          <circle id="living-room-sonos" cx="170" cy="230" r="4" class="sonos-inactive"></circle>
-          <path id="living-room-sonos-arc-1" class="sonos-arc-inactive"></path>
-          <path id="living-room-sonos-arc-2" class="sonos-arc-inactive"></path>
-          <path id="living-room-sonos-arc-3" class="sonos-arc-inactive"></path>
-          <path id="living-room-sonos-arc-4" class="sonos-arc-inactive"></path>
-          <path id="living-room-sonos-arc-5" class="sonos-arc-inactive"></path>
-          <path id="living-room-sonos-arc-6" class="sonos-arc-inactive"></path>
+            <title>Rooms</title>
+            <rect id="living-room" x="131.0187" y="122.625" width="283.97" height="98.9543" class="room-inactive"></rect>
+            <rect id="living-room-wall" x="131.0187" y="122.625" width="283.97" height="98.9543" class="room-inactive-wall"></rect>
+            <rect id="bedroom-guest-1" x="415.125" y="122.625" width="108.28059" height="98.9543" class="room-inactive"></rect>
+            <rect id="bedroom-guest-1-wall" x="415.125" y="122.625" width="108.28059" height="98.9543" class="room-inactive-wall"></rect>
+            <rect id="hallway" x="415.125" y="221.625" width="35" height="290.375" class="room-inactive"></rect>
+            <rect id="hallway-wall" x="415.125" y="221.625" width="35" height="290.375" class="room-inactive-wall"></rect>
+            <rect id="kitchen" x="131.0187" y="221.625" width="124.3563" height="101.20834" class="room-inactive"></rect>
+            <rect id="kitchen-wall" x="131.0187" y="221.625" width="124.3563" height="101.20834" class="room-inactive-wall"></rect>
+            <rect id="bathroom-guest" x="255.375" y="221.625" width="63" height="101.25" class="room-inactive"></rect>
+            <rect id="bathroom-guest-wall" x="255.375" y="221.625" width="63" height="101.25" class="room-inactive-wall"></rect>
+            <rect id="reading-room" x="318.375" y="221.625" width="96.61369" height="101.25" class="room-inactive"></rect>
+            <rect id="reading-room-wall" x="318.375" y="221.625" width="96.61369" height="101.25" class="room-inactive-wall"></rect>
+            <rect id="solarium" x="309.35206" y="322.875" width="105.63663" height="189.125" class="room-inactive"></rect>
+            <rect id="solarium-wall" x="309.35206" y="322.875" width="105.63663" height="189.125" class="room-inactive-wall"></rect>
+            <rect id="bathroom-main" x="450" y="249.94345" width="73.40559" height="70.875" class="room-inactive"></rect>
+            <rect id="bathroom-main-wall" x="450" y="249.94345" width="73.40559" height="70.875" class="room-inactive-wall"></rect>
+            <rect id="closet-hall" x="450" y="320.81845" width="73.40559" height="32.43155" class="room-inactive"></rect>
+            <rect id="closet-hall-wall" x="450" y="320.81845" width="73.40559" height="32.43155" class="room-inactive-wall"></rect>
+            <rect id="bedroom-guest-2" x="450" y="353.25" width="73.40559" height="70.875" class="room-inactive"></rect>
+            <rect id="bedroom-guest-2-wall" x="450" y="353.25" width="73.40559" height="70.875" class="room-inactive-wall"></rect>
+            <rect id="closet-master-bedroom" x="450" y="424.125" width="73.40559" height="109.625" class="room-inactive"></rect>
+            <rect id="closet-master-bedroom-wall" x="450" y="424.125" width="73.40559" height="109.625" class="room-inactive-wall"></rect>
+            <rect id="bedroom-master" x="309.35206" y="511.875" width="214.05352" height="143.125" class="room-inactive"></rect>
+            <rect id="bedroom-master-wall" x="309.35206" y="511.875" width="214.05352" height="143.125" class="room-inactive-wall"></rect>
+            <rect id="closet-guest-1" x="450" y="221.5793" width="73.40559" height="28.170703" class="room-inactive"></rect>
+            <rect id="closet-guest-1-wall" x="450" y="221.5793" width="73.40559" height="28.170703" class="room-inactive-wall"></rect>
+            <rect id="garage-laundry" x="138.375" y="543.375" width="73.40559" height="178.75" class="room-inactive"></rect>
+            <rect id="garage-laundry-wall" x="138.375" y="543.375" width="73.40559" height="178.75" class="room-inactive-wall"></rect>
+            <rect id="garage-front" x="41.625" y="543.375" width="96.61369" height="118.125" class="room-inactive"></rect>
+            <rect id="garage-front-wall" x="41.625" y="543.375" width="96.61369" height="118.125" class="room-inactive-wall"></rect>
+            <rect id="garage-rear" x="41.625" y="661.5" width="96.61369" height="60.625" class="room-inactive"></rect>
+            <rect id="garage-rear-wall" x="41.625" y="661.5" width="96.61369" height="60.625" class="room-inactive-wall"></rect>
+            <rect id="door-kitchen" x="220.125" y="319.5" width="19.5" height="6" class="door-inactive"></rect>
+            <rect id="door-kitchen-wall" x="220.125" y="319.5" width="19.5" height="6" class="door-inactive-wall"></rect>
+            <rect id="door-solarium" x="307.6875" y="395.5" width="4.5" height="43.875" class="door-inactive"></rect>
+            <rect id="door-solarium-wall" x="307.6875" y="395.5" width="4.5" height="43.875" class="door-inactive-wall"></rect>
+            <rect id="door-solarium-reading" x="342" y="319.5"  width="18" height="6" class="door-inactive"></rect>
+            <rect id="door-solarium-reading-wall" x="342" y="319.5"  width="18" height="6" class="door-inactive-wall"></rect>
+            <rect id="door-front" x="375.75" y="119.8125" width="18" height="6" class="door-inactive"></rect>
+            <rect id="door-front-wall" x="375.75" y="119.8125" width="18" height="6" class="door-inactive-wall"></rect>
+            <rect id="door-garage" x="177.75" y="540" width="19.5" height="6" class="door-inactive"></rect>
+            <rect id="door-garage-wall" x="177.75" y="540" width="19.5" height="6" class="door-inactive-wall"></rect>
+
+            <circle id="living-room-sonos" cx="170" cy="230" r="4" class="sonos-inactive"></circle>
+            <path id="living-room-sonos-arc-1" class="sonos-arc-inactive sonos-arc-1"></path>
+            <path id="living-room-sonos-arc-2" class="sonos-arc-inactive sonos-arc-2"></path>
+            <path id="living-room-sonos-arc-3" class="sonos-arc-inactive sonos-arc-3"></path>
+            <path id="living-room-sonos-arc-4" class="sonos-arc-inactive sonos-arc-4"></path>
+            <path id="living-room-sonos-arc-5" class="sonos-arc-inactive sonos-arc-5"></path>
+            <path id="living-room-sonos-arc-6" class="sonos-arc-inactive sonos-arc-6"></path>
+
+            <circle id="lights-garage-outside-1" cx="170" cy="724" r="3" class="lights-inactive"></circle>
+            <path id="lights-garage-outside-arc-1" class="lights-arc-inactive lights-garage-1"></path>
+            <path id="lights-garage-outside-arc-2" class="lights-arc-inactive lights-garage-2"></path>
+            <path id="lights-garage-outside-arc-3" class="lights-arc-inactive lights-garage-3"></path>
+            <circle id="lights-garage-outside-2" cx="213" cy="704" r="3" class="lights-inactive"></circle>
+            <path id="lights-garage-outside-arc-4" class="lights-arc-inactive lights-garage-4"></path>
+            <path id="lights-garage-outside-arc-5" class="lights-arc-inactive lights-garage-5"></path>
+            <path id="lights-garage-outside-arc-6" class="lights-arc-inactive lights-garage-6"></path>
+
+            <circle id="lights-house-south1" cx="256" cy="120" r="3" class="lights-inactive"></circle>
+            <path id="lights-house-south1-arc-1" class="lights-arc-inactive lights-house-south1-1"></path>
+            <path id="lights-house-south1-arc-2" class="lights-arc-inactive lights-house-south1-2"></path>
+            <circle id="lights-house-south2" cx="408" cy="120" r="3" class="lights-inactive"></circle>
+            <path id="lights-house-south2-arc-1" class="lights-arc-inactive lights-house-south2-1"></path>
+            <path id="lights-house-south2-arc-2" class="lights-arc-inactive lights-house-south2-2"></path>
         </g>
       </g>
     </svg>
