Addressed the broken sonos visuals as identified in issue #2

--- a/5865-w-74-movement.html
+++ b/5865-w-74-movement.html
@@ -24,7 +24,7 @@
       <g stroke="none" stroke-opacity="1" stroke-dasharray="none" fill="none" fill-opacity="1">
         <title>Canvas 1</title>
         <g>
-            <title>Rooms</title>
+            <rect id="base" x="0" y="0" width="576" height="750" class="base-active"></rect>
             <rect id="living-room" x="131.0187" y="122.625" width="283.97" height="98.9543" class="room-inactive"></rect>
             <rect id="living-room-wall" x="131.0187" y="122.625" width="283.97" height="98.9543" class="room-inactive-wall"></rect>
             <rect id="bedroom-guest-1" x="415.125" y="122.625" width="108.28059" height="98.9543" class="room-inactive"></rect>
